# SkyPro-diplom

./: .coveragerc  .env.example  .gitignore  Dockerfile  README.md  debug_env.py  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
tracker/: models.py  serializers.py  tests.py  urls.py  views.py
tracker/migrations/: 0001_initial.py  0002_alter_task_assignee.py  0003_alter_task_assignee.py
